# tleaf-token

./: .gitignore  Cargo.toml  NOTICE  README.md  package.json
artifacts/: checksums.txt  checksums_intermediate.txt  tleaf_token.wasm
deployment/: .sample.env  .sample.mainnet.env  README.md  package.json
deployment/token/: env_store.js  instantiate.js  instantiate_msg.json  store.js  terra_base.js
src/: contract.rs  error.rs  msg.rs  state.rs
