[package]
name = "tleaf-token"
version = "0.1.0"
authors = ["Jerzy Lasyk <jerzylasyk@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = { version = "0.9.0" }
cw2 = { version = "0.9.0" }
cw20 = { version = "0.9.0" }
cw20-base  = { path = "packages/cw20-base", version = "0.9.0" }
cw-storage-plus = { version = "0.9.0" }
terra-cosmwasm = { version = "2.2.0" }
cosmwasm-std = { version = "0.16" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
protobuf = { version = "2", features = ["with-bytes"] }

[dev-dependencies]
cosmwasm-schema = { version = "0.16" }
